--- a/datavisual.html
+++ b/datavisual.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title> Jerick's Website for Data Visualization</title>
   <link rel="stylesheet" href="datavisual.css">
@@ -47,3 +48,4 @@
     </div>
   </footer>
 </body>
+</html>
